src/style.less
/* ... */
.g-nav-list {
	/*width: 120%;*/
	margin-bottom: 0;
	overflow: hidden;
}

.g-nav-name {
	font-family: blackoak-std, serif;
	font-weight: 400;
	font-style: normal;
	font-size: 15px;
	padding: 0 0 0 20px;
	transform: scaleX(0.8);
	margin-left: -10%;
	padding-bottom: 3px;

	#g-clickhere-arrow {
		height: calc(100% - 13px);
		width: auto;
		transform: scaleX(1.8);
		margin-left: 17px;
		position: absolute;
		top: 5px;
	}
}

.g-nav-list-store .g-nav-name {
	color: #bf0000
}

.g-nav-name:hover {
	cursor: pointer;
}

.g-nav-content {
	position: relative;
	// display: none;
}

@media screen and (min-width: 600px) {
	.g-nav-list {
		
	}

	.g-nav-name #g-clickhere-arrow {
		height: calc(100% - 17px);
		width: auto;
		transform: scaleX(1.7);
		margin-left: 17px;
		position: absolute;
		top: 7px;
	}

	.g-nav-name {
		/*margin-left: -14%;*/
		font-size: 24px;
	}
}

.g-nav {
	max-width: 1050px;
	margin: 0 auto;
	overflow: hidden;
}

.g-logo-cont {
	padding: 20px 20px 0 20px;
	margin-bottom: 20px;
}

.g-logo-cont img {
	max-width: 350px;
}

.g-store {
	// padding: 25px 0;
}

.g-store-each {
	margin-bottom: 25px;
	position: relative;
}

.g-img {
	// padding-bottom: 100%;
	position: relative;
	overflow: hidden;
	img {
		background: #f7f7f7;
		position: absolute;
		top: 0;
	}
}

.g-store-buy .g-img.g-img-slideshow-cont {

	// padding-bottom: calc(100% + 70px);

	@media screen and (min-width: 600px) {
		position: relative;
		display: inline-block;
		// padding-bottom: calc(50% + 70px);
	}

	.g-img {
		position: absolute;
		top: 0;
		left: 0;

		&:first-child {
			position: relative;
		}
	}

	.g-img-slideshow {
		z-index: 0;

		&.g-on-top {
			z-index: 1;
		}
	}

	.g-thumbnail-cont {
		// position: absolute;
		// top: calc(100% - 60px);
		// left: 10px;
		cursor: pointer;
		margin-top: 5px;
		padding: 0 20px;

		@media screen and (min-width: 600px) {
			padding: 0;
		// 	top: calc(100% - 60px);
		// 	left: 0;
		}


		&:focus {outline:none;}


		// @media screen and (min-width: 970px) {
		// 	top: calc(100% - 100px);
		// }

		.g-img-thumbnail {
			position: relative;

			width: 50px;
			height: 50px;
			margin-right: 1px;
			margin-bottom: 0px;

			&:hover {
				cursor: pointer;
				// opacity: 0.6;
			}
		}

	}
}



@media screen and (min-width: 600px) {
	
	.g-store, #my-form {
		padding: 5px 25px;
	}

	.g-store-each {
		display: inline-block;
		vertical-align: top;
		width: calc(33% - 10px);
		margin-right: 9px;
	}

	.g-store-each:last-child {
		margin-right: 0;
	}
}

//.g-shopping-cart-inner
.g-meta, #my-form, .g-shopping-cart .g-back {
	padding: 5px 20px;
	
}

@media screen and (min-width: 600px) {

	.g-meta {
		padding: 0;
	}

	.g-store-buy .g-meta {
		width: calc(50% - 30px);
	}

}

.g-name {
	font-weight: 700;
	font-size: 20px;
}

.g-desc, .g-agate {
	font-style: italic;
	color: #777;
	font-size: 13px;
}

.g-desc {
	// margin-bottom: 6px;

	p {
		margin: 0 !important;
	}
}

.g-price {
	margin-top: 6px;
}

.g-price-num {

	.g-price-old {
		position: relative;
		color: #777;
		&:before {
			content: "";
			position: absolute;
			width: 110%;
			height: 1.1px;
			background: #555;
			top: 49%;
			left: -5%;
			transform: rotate(-13deg);
		}
	}

	&.g-sold-out {
		color: #bf0000;
		font-style: italic;
	}
	
}

.g-agate {
	font-size: 11px;
	vertical-align: top; 
}


footer {
	font-family: "arial";
	font-size: 12px;
	padding: 20px;
	color: #999;
	text-align: center;
	padding-top: 100px;

	.g-social {
		margin-bottom: 5px;
		opacity: 0.8;
	}

	.g-social-icon {
		width: 22px;
		height: 22px;
		background-size: 100%;
		display: inline-block;
		margin-right: 10px;

		&.g-ig {
			background-image: url(img/ig.png);
		}

		&.g-whatsapp {
			background-image: url(img/whatsapp.png);
			margin-right: 0;
		}
	}
}

a {
	text-decoration: none;
	color: #000;
	transition: opacity 0.5s;
}

// a:hover {
// 	opacity: 0.6;
// }

.g-store-buy {
	width: 100%;
	padding-bottom: 50px;
}

.g-store-each:hover {
	cursor: pointer;
}

@media screen and (min-width: 600px) {
	.g-store-buy .g-img, .g-store-buy .g-meta.g-meta {
		display: inline-block;
		vertical-align: top;
	}

	.g-store-buy .g-img {
		max-width: 460px;
		margin-right: 20px;
		width: 50%;
		// padding-bottom: 50%;
	}

}

.g-store-buy .g-buy {
	margin: 25px auto;
	// display: none;
}

.g-size {
	margin-bottom: 10px;
}

.g-colors {
	margin: 5px 0 8px 0;
	.g-label {
		vertical-align: middle;
		display: inline-block;
	}
	.g-color-circle {
		width: 20px;
		height: 20px;
		display: inline-block;
		border: 1px solid #ddd;
		vertical-align: middle;
		cursor: pointer;

		&.g-picked {
			&:before {
				content: "";
				width: 0;
				height: 0;
				border-style: solid;
				border-width: 10px 10px 0 0;
				border-color: #999 transparent transparent transparent;
				position: absolute;
			}
		}

		&.g-color-not-available {
			opacity: 0.05;
			user-select: none;
			cursor: default;
		}
	}
}

.g-volume-cont {
	display: inline;
	margin-left: -15px;
	
	div {
		display: inline-block;
		width: 20px;
		font-weight: 500;
		text-align: center;
	}

	.g-minus {

	}

	.g-count {
		border: 1px solid #ddd;
		width: 30px;
		padding: 4px 0;
		text-align: center;
		font-size: 13px;
	}

	.g-count-button {
		user-select: none;
	}

	.g-count-button:hover {
		cursor: pointer;
	}
}

.g-label {
	margin-right: 20px;
	vertical-align: middle;
	font-size: 12px;
}

input,select {
	width: 100px;
	border: 1px solid #ddd;
	padding: 1px;
	font-size: 13px;
	opacity: 0.7;
}

input {
	width: 92px;
	padding-left: 5px;
	background: rgba(255,255,255,0.8);
}

.g-button, .g-buy-button {
	margin-top: 25px;
	background: none;
	border: none;
	box-shadow: none;
	border: 1px solid #ddd;
	padding: 8px 16px;
}

.g-button:hover {
	background: #ddd;
	cursor: pointer;
}

.g-buy-popup {
	position: fixed;
	-webkit-transform: translateZ(0);
	top: 0;
	width: 100vw;
	height: 100vh;
	background: rgba(0,0,0,0.8);

	// display: none;
	color: #fff;
	z-index: 10;

}
/* ... */

